<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".modules.recipe_view.preparing.PrepareFragment"
    android:weightSum="100">

    <FrameLayout
        android:layout_weight="35"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <FrameLayout
            android:id="@+id/frame_video"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ImageView
            android:id="@+id/iv_placeholder"
            android:visibility="gone"
            android:layout_gravity="center"
            android:src="@drawable/image_recipe_placeholder"
            android:layout_width="128dp"
            android:layout_height="128dp" />

    </FrameLayout>




    <RelativeLayout
        android:id="@+id/panel_content"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="65">

        <TextView
            android:id="@+id/tv_step_description"
            android:textSize="@dimen/font_size_large"
            android:layout_margin="@dimen/margin_medium"
            tools:text=" Not supplying enough data to HAL, expected position 6492259 , only wrote 6492240"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:background="@color/colorPrimary"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:weightSum="100">

            <TextView
                android:id="@+id/btn_previous_step"
                android:text="@string/previous_step"
                android:layout_weight="50"
                android:layout_width="0dp"
                android:gravity="center"
                android:textSize="16sp"
                android:background="@drawable/button_steps_background"
                android:textColor="@color/white"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/btn_next_step"
                android:text="@string/next_step"
                android:layout_weight="50"
                android:layout_width="0dp"
                android:gravity="center"
                android:textSize="16sp"
                android:background="@drawable/button_steps_background"
                android:textColor="@color/white"
                android:layout_height="match_parent" />

        <!--    <Button
                android:id="@+id/btn_previous_step"
                android:layout_width="0dp"
                android:text="@string/previous_step"
                android:layout_weight="50"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_next_step"
                android:text="@string/next_step"
                android:layout_weight="50"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />-->


        </LinearLayout>

    </RelativeLayout>


</LinearLayout>