...
                android:background="@color/transparent_brown"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <android.support.v7.widget.RecyclerView
                android:layout_margin="@dimen/margin_regular"
                android:id="@+id/rv_ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_margin="@dimen/margin_regular"
                android:textSize="24sp"
...
                android:background="@color/transparent_brown"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <android.support.v7.widget.RecyclerView
                android:layout_margin="@dimen/margin_regular"
                android:id="@+id/rv_steps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />



        </LinearLayout>
...
